[package]
name = "neemata-proxy"
version = "0.1.0"
edition = "2024"

[package.metadata.patch]
crates = ["pingora-core"]

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "3", features = ["async", "tokio_rt", "napi4"] }
napi-derive = "3.0.0"
async-trait = "0.1"
pingora = { version = "0.7", features = ["lb", "proxy"] }
pingora-load-balancing = "0.7"
http = "1.0"
tokio = { version = "1.48.0", features = ["macros", "net", "rt-multi-thread", "sync", "time"] }
tokio-util = "0.7"
arc-swap = "1.7"
url = "2.5.7"
log = "0.4.28"
env_logger = "0.11.8"

[build-dependencies]
napi-build = "2"
patch-crate = "0.1.13"

[profile.release]
lto   = true
strip = "symbols"

[patch.crates-io]
pingora-core = { path = "./target/patch/pingora-core-0.7.0" }
